# galilAIo

./: .gitignore  README.md  main.py  pyproject.toml
backend/: pyproject.toml
backend/core/: package.json
backend/core/src/server/db/: schema.ts
core/: .env.example  drizzle.config.ts  package.json
core/src/: env.js
core/src/app/: layout.tsx
core/src/app/api/chat/: route.ts
core/src/app/chat/: page.tsx
core/src/app/chat/.embed/: page.tsx
core/src/app/chat/embed/: page.tsx  page.tsx.new
core/src/hooks/: useElevenLabsStreaming.ts  useVoiceWebSocket.ts
core/src/server/api/: trpc.ts
core/src/server/api/routers/: chat.ts  post.ts
manim_tool/: README.md  json_test_suite.py  main.py  pyproject.toml  simple_main.py  start.sh  working_json_animator.py
manim_tool/media/Tex/: 381aa5f074a49b15.tex  534a08fb3f366344.tex  748ffe985961e959.tex  8dae0b1488177d58.tex  c099a9771b7b306e.tex  dfa775231d75c34b.tex  fb92600bad384847.tex
manim_tool/media/videos/720p30/partial_movie_files/WorkingEquationScene/: partial_movie_file_list.txt
manim_tool/media/videos/720p30/partial_movie_files/WorkingIntegralScene/: partial_movie_file_list.txt
manim_tool/media/videos/720p30/partial_movie_files/WorkingLinearSystemScene/: partial_movie_file_list.txt
manim_tool/media/videos/720p30/partial_movie_files/WorkingRiemannScene/: partial_movie_file_list.txt
manim_tool/util/: function_parser.py  manim_engine.py
manim_tool/util/lib/: request.py
mockVision/: main.py  pyproject.toml  screenshot_server.py
scribe/: main.py  pyproject.toml  requirements.txt  test_client.py
vision/: main.py  pyproject.toml
vision/util/: autobrightness.py  markergen.py
vision/util/rlib/: request.py
vision/util/transformationkit/: imagereworkengine.py  softbinary.py
