[project]
name = "manim_tool"
version = "0.1.0"
description = "Manim animation tool for mathematical function visualization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "uvicorn[standard]>=0.32.0",
    "manim>=0.18.0",
    "numpy>=1.24.0",
    "sympy>=1.12",
    "matplotlib>=3.7.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "pyrefly>=0.32.0",
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
